force-app/main/default/objects/Protocol__c/Protocol__c.object-meta.xml
<CustomObject>
    <label>Protocol</label>
    <nameField>
        <label>Protocol Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Protocols</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>