force-app/main/default/objects/Protocol__c/fields/Applicable_Cycle_Types__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Cycle_Types__c</fullName>
    <label>Applicable Cycle Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed Cycle</fullName>
            </value>
            <value>
                <fullName>Egg Freeze Cycle</fullName>
            </value>
            <value>
                <fullName>FET Cycle</fullName>
            </value>
            <value>
                <fullName>Fresh Egg Donor Cycle</fullName>
            </value>
            <value>
                <fullName>IUI Cycle</fullName>
            </value>
            <value>
                <fullName>IVF Cycle</fullName>
            </value>
            <value>
                <fullName>OI Cycle</fullName>
            </value>
            <value>
                <fullName>TARFO Cycle</fullName>
            </value>
            <value>
                <fullName>Trial Cycle</fullName>
            </value>
            <value>
                <fullName>VOT Cycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>