force-app/main/default/objects/Protocol__c/fields/Crossover__c.field-meta.xml
<CustomField>
    <fullName>Crossover__c</fullName>
    <label>Crossover</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crossover</fullName>
            </value>
            <value>
                <fullName>No Crossover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>