force-app/main/default/objects/Protocol__c/fields/Cycle_Type__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Type__c</fullName>
    <label>Cycle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FSH</fullName>
            </value>
            <value>
                <fullName>HRT</fullName>
            </value>
            <value>
                <fullName>Letrozole</fullName>
            </value>
            <value>
                <fullName>Clomid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>