force-app/main/default/objects/Protocol__c/fields/GNRH__c.field-meta.xml
<CustomField>
    <fullName>GNRH__c</fullName>
    <label>GNRH</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Down Reg</fullName>
            </value>
            <value>
                <fullName>Antagonist</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>