force-app/main/default/objects/Protocol__c/fields/Lead_In__c.field-meta.xml
<CustomField>
    <fullName>Lead_In__c</fullName>
    <label>Lead In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primolut</fullName>
            </value>
            <value>
                <fullName>Syneral</fullName>
            </value>
            <value>
                <fullName>Natural</fullName>
            </value>
            <value>
                <fullName>OCP</fullName>
            </value>
            <value>
                <fullName>Progesterone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>