force-app/main/default/objects/Protocol__c/listViews/allSelection_Protocol.listView-meta.xml
<ListView>
    <fullName>allSelection_Protocol</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>